refactor: simplify application null-handling flows